refactor: move cli setup into __main__.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    makeclean = makeclean:main
+    makeclean = makeclean.__main__:cli
 
 [flake8]
 max-complexity = 12
