make setup-cfg-fmt happy

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [metadata]
+name = attr: setup.name
 version = attr: makeclean.__version__
 description = remove lists of files and folders
 long_description = file: README.md
@@ -7,6 +8,7 @@ url = https://github.com/Cube707/python-makeclean
 author = Jan Wille
 author_email = mail@janwille.de
 license = MIT
+license_file = LICENCE
 license_files = LICENCE
 classifiers =
     Development Status :: 3 - Alpha
@@ -27,13 +29,13 @@ project_urls =
     Source Code = https://github.com/Cube707/python-makeclean
 
 [options]
-python_requires = >=3.10
-package_dir =
-    = src
 install_requires =
     click
     setuptools
     wheel
+python_requires = >=3.10
+package_dir =
+    = src
 
 [options.entry_points]
 console_scripts =
